# sunny-rs

./: .gitignore  .rustfmt.toml  CHANGELOG.md  Cargo.toml  LICENSE.md  README.md  TODO.md  example_config.toml  prepare_release.nu
.github/workflows/: ci.yml  release.yml
HomebrewFormula/: sunny-cli.rb
scripts/: create_archives.sh  create_npm.sh  create_release.sh  publish_npm.sh  update_hashes.sh
src/: args.rs  config.rs  fetch.rs  main.rs  printer.rs
