[package]
name = "sunny-cli"
version = "0.5.1"
authors = ["James Plummer <jamesp2001@live.co.uk>"]
categories = ["command-line-utilities"]
edition = "2024"
homepage = "https://github.com/jamesukiyo/sunny-rs"
keywords = ["cli", "weather", "terminal"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/jamesukiyo/sunny-rs"
description = "Check the weather from your terminal."

[[bin]]
name = "sunny"
path = "src/main.rs"

[lints.clippy]
unwrap_used = "deny"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
color-eyre = { version = "0.6", default-features = false }
colored = "3.0"
console = "0.16"
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"

[target.aarch64-unknown-linux-gnu.dependencies]
openssl = { version = "0.10.73", features = ["vendored"] }

[profile.release]
opt-level = "z"
debug = false
strip = "symbols"
lto = "fat"
codegen-units = 1
panic = "abort"
